[gd_scene load_steps=9 format=3 uid="uid://51rvmruybgkx"]

[ext_resource type="Script" path="res://Components/Popups/view_player_picture.gd" id="1_fxwee"]
[ext_resource type="Texture2D" uid="uid://lmqc02xq1shh" path="res://UITextures/Buttons/like_empty.png" id="2_huled"]
[ext_resource type="Texture2D" uid="uid://kkrprjr0qi2e" path="res://UITextures/Buttons/like_full.png" id="3_uc4ir"]
[ext_resource type="FontFile" uid="uid://cbqgl5ybh1snb" path="res://UITextures/Fonts/argentum-sans.vf-regular.ttf" id="4_aruxo"]
[ext_resource type="Texture2D" uid="uid://df4ks21hiueoy" path="res://UITextures/Buttons/next_prev_button.png" id="5_oflym"]
[ext_resource type="Texture2D" uid="uid://3rxqq1un1t5e" path="res://UITextures/Buttons/close.png" id="6_ii88t"]
[ext_resource type="Texture2D" uid="uid://dw8vtn3ftjpfy" path="res://UITextures/Buttons/close_hover.png" id="7_ug0qc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lsll3"]
bg_color = Color(0, 0, 0, 0.929412)

[node name="ViewPlayerPicture" type="Control"]
visible = false
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fxwee")

[node name="Panel" type="Panel" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lsll3")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
alignment = 1

[node name="DisplayPictureTexture" type="TextureRect" parent="Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 350)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(600, 60)
layout_mode = 2
theme_override_constants/separation = 7

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LikeButton" type="TextureButton" parent="Panel/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 0
toggle_mode = true
texture_normal = ExtResource("2_huled")
texture_pressed = ExtResource("3_uc4ir")
ignore_texture_size = true
stretch_mode = 0

[node name="LikeCountLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("4_aruxo")
theme_override_font_sizes/font_size = 13
text = "999"
horizontal_alignment = 1

[node name="LikersLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("4_aruxo")
theme_override_font_sizes/font_size = 13
text = "Liked by"

[node name="VBoxContainer2" type="HBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -35.0
offset_right = 72.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LeftButton" type="TextureButton" parent="Panel/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("5_oflym")
ignore_texture_size = true
stretch_mode = 5
flip_h = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="RightButton" type="TextureButton" parent="Panel/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("5_oflym")
ignore_texture_size = true
stretch_mode = 5

[node name="CloseButton" type="TextureButton" parent="Panel"]
layout_mode = 0
size_flags_horizontal = 3
texture_normal = ExtResource("6_ii88t")
texture_hover = ExtResource("7_ug0qc")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/LikeButton" to="." method="_on_like_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer2/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer2/RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="Panel/CloseButton" to="." method="_on_close_button_pressed"]
